--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,10 @@
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=jdbc:postgresql:postgres://bundle_user:HSbykNREXpPYH9AtR27LT8x0ZvK5fPpJ@dpg-cf2gku6n6mpkr6e91i3g-a.oregon-postgres.render.com/bundle
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+#spring.datasource.url=jdbc:postgresql:postgres://bundle_user:HSbykNREXpPYH9AtR27LT8x0ZvK5fPpJ@dpg-cf2gku6n6mpkr6e91i3g-a.oregon-postgres.render.com/bundle
 #spring.datasource.username=bundle_user
 #spring.datasource.password=HSbykNREXpPYH9AtR27LT8x0ZvK5fPpJ
+
+spring.jpa.hibernate.ddl-auto=none
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+spring.datasource.url=jdbc:h2:mem:data;
