--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,4 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.datasource.url=jdbc:postgresql://dpg-cf2gku6n6mpkr6e91i3g-a.oregon-postgres.render.com/bundle
 spring.datasource.username=bundle_user
 spring.datasource.password=HSbykNREXpPYH9AtR27LT8x0ZvK5fPpJ
-
-# Generates tables based on entities
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
