--- a/app/package.json
+++ b/app/package.json
@@ -43,6 +43,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-slider": "^1.3.1"
+    "@types/react-slider": "^1.3.1",
+    "react-icons": "^4.7.1"
   }
 }
