--- a/app/package.json
+++ b/app/package.json
@@ -10,8 +10,10 @@
     "@types/node": "^16.18.11",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "plotly.js": "^2.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-plotly.js": "^2.6.0",
     "react-scripts": "5.0.1",
     "react-slider": "^2.0.4",
     "typescript": "^4.9.4",
