--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "react-plotly.js": "^2.6.0",
     "react-scripts": "5.0.1",
     "react-slider": "^2.0.4",
+    "swr": "^2.0.1",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
