--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "5.0.1",
     "react-slider": "^2.0.4",
     "swr": "^2.0.1",
+    "recharts": "^2.3.2",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
